# infraMind

./: .env.example  .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  server.py  verify.py  verify_judge.py
data/: inframind_sft.jsonl
env/: __init__.py  engine.py  models.py
env/scenarios/: __init__.py  auth_bypass.py  base.py  cascade_failure.py  cpu_spike.py  custom.py  db_deadlock.py  k8s_cluster_compromise.py  memory_leak.py  variants.py
notebooks/: InfraMind_Training_RL.ipynb  InfraMind_Training_Unsloth.ipynb
scripts/: generate_dataset.py  train_rl_ppo.py  train_unsloth.py  write_notebook.py
server/: app.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  api.ts  index.css  types.ts
ui/src/components/: ActionPanel.tsx  AgentSwarmPanel.tsx  AlertsPanel.tsx  AutoRunPanel.tsx  ComparePanel.tsx  CustomScenarioBuilder.tsx  CustomScenarioPanel.tsx  FeedbackPanel.tsx  Header.tsx  JiraPanel.tsx  Leaderboard.tsx  LiveAgentPanel.tsx  LogStream.tsx  MemoryPanel.tsx  MetricsPanel.tsx  NoisePanel.tsx  PRPanel.tsx  RLTrainingPanel.tsx  ReplayPanel.tsx  RewardPanel.tsx  TaskSelector.tsx  TelemetryChart.tsx  WarRoom.tsx  WorkspacePanel.tsx
