[project]
name = "infra-mind"
version = "1.0.0"
description = "InfraMind: Autonomous DevOps Benchmark — OpenEnv multi-agent SRE simulation"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "InfraMind Team"}
]
keywords = ["openenv", "sre", "devops", "multi-agent", "benchmark"]

dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "pydantic==2.10.3",
    "httpx==0.28.1",
    "openai==1.57.0",
    "python-dotenv==1.0.1",
]

[project.urls]
Homepage = "https://huggingface.co/spaces/aakarsh2007/infraMind"
Repository = "https://github.com/Aakarsh2007/infraMind"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[tool.openenv]
name = "infra-mind"
version = "1.0.0"
entry_point = "server:app"
